# Matches

./: .gitignore  .gitlab-ci.yml  Allumettes.cbp  Allumettes.depend  Allumettes.dev  Allumettes.layout  Allumettes.layout.save  CMakeLists.txt  Makefile.win  README.md  allumettes - affichage.c  allumettes - affichage.c.save  allumettes - affichage.h  allumettes - affichage.h.save  allumettes - jeu.c  allumettes - jeu.c.save  allumettes - jeu.h  allumettes - jeu.h.save  allumettes - main.c  allumettes - main.c.save  main.h
src/: allumettes - affichage.c  allumettes - affichage.h  allumettes - jeu.c  allumettes - jeu.h  allumettes - main.c  main.h
