cmake_minimum_required(VERSION 3.25)
project(matches-sdl C)

set(CMAKE_C_STANDARD 11)

add_executable(${PROJECT_NAME})
#target_compile_options(${PROJECT_NAME} PRIVATE -Werror -Wall -Wextra -pedantic-errors -Wconversion -Wsign-conversion)
add_subdirectory(src)

# --- SDL2 SETUP --- (CLion/Windows)
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
set(SDL2_PATH "SDL2/x86_64-w64-mingw32")
set(SDL2_IMAGE_PATH "SDL2/x86_64-w64-mingw32")
set(SDL2_TTF_PATH "SDL2/x86_64-w64-mingw32")

find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
include_directories(${SDL2_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY})
target_link_libraries(${PROJECT_NAME} ${SDL2_IMAGE_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${SDL2_TTF_LIBRARIES})

configure_file(share/images/allumette.jpg       ./images/allumette.jpg      COPYONLY)
configure_file(share/images/allumette\ 1.jpg    ./images/allumette\ 1.jpg   COPYONLY)
configure_file(share/images/allumette\ 2.jpg    ./images/allumette\ 2.jpg   COPYONLY)
configure_file(share/images/feu.jpg             ./images/feu.jpg            COPYONLY)
configure_file(share/images/icone.bmp           ./images/icone.bmp          COPYONLY)

configure_file(share/polices/angelina.ttf	    ./polices/angelina.ttf      COPYONLY)
configure_file(share/polices/arial.ttf       	./polices/arial.ttf         COPYONLY)
configure_file(share/polices/firestarter.ttf 	./polices/firestarter.ttf   COPYONLY)
configure_file(share/polices/freescpt.ttf       ./polices/freescpt.ttf      COPYONLY)
configure_file(share/polices/frscript.ttf	    ./polices/frscript.ttf      COPYONLY)
configure_file(share/polices/times.ttf	        ./polices/times.ttf         COPYONLY)
